# spectral

./: .gitignore  .python-version  .repo-to-text-settings.yaml  Info.md  LICENSE  Makefile  README.md  contests.py  local.yml  pyproject.toml  repo-to-text_2025-01-05-20-44-50-UTC.txt  requirements.txt  test.yml
.jupyter/desktop-workspaces/: default-37a8.jupyterlab-workspace
docs/: combine_itpc.ipynb  plot_parcelation.ipynb
examples/: simulate.ipynb
notebooks/: 00_import_to_xarray.ipynb  01_create_pandas.ipynb  02_work_with_pandas.ipynb  eeg.html  spectrum.ipynb
notebooks/.ipynb_checkpoints/: simulate-checkpoint.ipynb  spectrum-checkpoint.ipynb
scripts/: 00_load_data.py  01_split_assr_data.py  03_compute_psd.py  04_compute_specparam.py  05_update_metadata.py  Snakefile
spectral/: analysis.py  bayesian_helpers.py  brain_atlas.py  dataio.py  itpc.py  plotpsd.py  preprocess_assr.py  preprocess_rs.py  settings.py  simulation.py  spectral.py  utils.py  visualization.py
spectral.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
src/lambic/: __init__.py  data.py  eeg.py  spectrum.py  utils.py  visualize.py
src/poirot/: load_data.py  spectrum.py  translate.py  utils.py  visualise_slope.py  visualize.py
src/tests/: test_eeg.py
studies/ASSR/: Makefile  diary.txt
studies/ASSR/scripts/: 00_clean_data_on_disc.py  00_load_data.py  01_split_assr_data.py  03_compute_psd.py  04_compute_specparam.py  05_update_metadata.py  config.yaml
tests/: test_brain_atlas.py  test_simulations.py  test_spectrum.py  test_utils.py  test_visualize.py
