[build-system]
requires = ["hatchling>=1.11.0"]
build-backend = "hatchling.build"

[project]
name = "lambic"
authors = [{name = "Daniel Borek", email = "daniel.borek@ugent.be"}]
readme = "README.md"
version = "0.1.0dev"
description = "Project for working with EEG data"
license = {file = "LICENSE"}
classifiers = ["License :: OSI Approved :: MIT License"]
pidependencies = [
    "mne",
    "seaborn",
    "xarray",
    "h5netcdf",
]

[tool.pytest.ini_options]
pythonpath = [
    "src"
]