[build-system]
requires = ["flit_core>=3.3"]
build-backend = "flit_core.buildapi"

[project]
name = "poirot"
authors = [{name = "Daniel Borek", email = "daniel.borek@ugent.be"}]
readme = "README.md"
version = "0.1.1dev0"
description = "Project for working with EEG data"
license = {file = "LICENSE"}
classifiers = ["License :: OSI Approved :: MIT License"]

requires-python = ">=3.7"

dependencies = [
    "mne",
    "pandas",
    "seaborn",
    "xarray",
    "h5netcdf",
    "netcdf4"
]

[tool.pytest.ini_options]
pythonpath = [
    "src"
]