[build-system]
requires = ["setuptools>=61",  "setuptools_scm[toml]>=6.2"]
build-backend = "setuptools.build_meta"

[project]
name = "spectral"
authors = [{ name = "Daniel Borek", email = "daniel.borek@ugent.be" }]
readme = "README.md"
version = "0.0.1.dev0"
description = "Project for working with electrophysiological data"
license = { file = "LICENSE" }
classifiers = ["License :: OSI Approved :: MIT License"]

requires-python = ">=3.10"

dependencies = [
    "mne",
    "specparam>=2.0.0rc1",
    "numpy",
    "pandas",
    "seaborn",
    "mne_bids",
    "matplotlib",
    "geopandas"
]
[project.optional-dependencies]
test = [
    "pytest",
    "pytest-watcher",
    "pytest-mock",
    "pytest-notebook",
    "nbval",
    "pre-commit",
    "nbstripout"

]

[tool.setuptools.packages.find]
include = ["spectral*"]
namespaces = false

[tool.pytest.ini_options]
pythonpath = [
    "."
]
addopts = "-v"
testpaths = ["docs"]



[tool.black]
line-length = 88
target-version = ['py310', 'py311']
include = '\.pyi?$'

# iSort
[tool.isort]
profile = "black"
line_length = 88
multi_line_output = 3
include_trailing_comma = true


[tool.flake8]
ignore = ['E231', 'E241']
per-file-ignores = [
    '__init__.py:F401',
]
max-line-length = 88
count = true


[tool.pytest-watcher]
now = false
delay = 1.0
runner = "pytest"
patterns = ["*.ipynb"]
ignore_patterns = []